--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         correo:ejrojase@unadvirtual.edu.contacto
     </p>
  </h4>
-<h3>
 
+ <h2>fases del proyecto</h2>
+<a href="fase2/desing.html">fase 2</a>
 </body>
 </html>
