--- a/fase2/desing.html
+++ b/fase2/desing.html
@@ -44,6 +44,12 @@
                     as Hojas de Estilo en Cascada (CSS) pueden hacer mucho más que definir el color y tipo de letra de su página Web. Os mostramos cómo implementar la potencia de las CSS en sus creaciones Web.
                     <p>Kemp, J. (2008). Trucos con estilo. Linux magazine, (43), 23-27.</p>
                     <img src="img/hojas en cascada.jfif" alt="descripcion alternativa">
+                    <h4>cascada</h4>
+                    <p>los efectos CSS se aplican en cascada ya que podemos tener varias hojas
+                        de estilo distintas en la misma pagina. El color puede tomarse de un estilo vinculado
+                    en un .CSS mientras que el tamaño puede venir de un estilo en la cabecera </p>
+                    <img src="img/hojas texto.png" alt="descripcion alternativa">
+
                 </p>
 
                  <hr>
@@ -52,8 +58,10 @@
                  <p>
                      es herramientas y pautas,para desarrollar el estilo de nuestra página web.
                      <p>Yuste Torregrosa, Á., & Luján-Mora, S. (2013). iDESWEB: Frameworks CSS: Bootstrap. iDESWEB.</p>
-                      <img src="img/frameworks css.png" alt="descripcion alternativa">  
-                    </p>
+                      <img src="img/frameworks css.png" alt="descripcion alternativa"> 
+                       <h4>usos comunes</h4>
+                       <p>.sustituir los elementos predeterminados del navegador</p>
+                       <p>.ayudar a hacer el texto accesible en cualquier soporte</p>
                                   
         </section>
 
@@ -62,7 +70,7 @@
     <footer>
         <p>correo:eve167707@gmail.com <br>
             skype:evelyn rojas <br>
-            fecha:septiembre 2021 <br>
+            fecha:septiembre 2021<br>
         </p>
     </footer>
     <h2>Mi Mockup </h2>
