--- a/fase3/recurso1.html
+++ b/fase3/recurso1.html
@@ -14,7 +14,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li>Tema</li>
+            <li>Tema</li> <h4>proposito del sitio </h4>
+            <p>el proposito de este sitio es impulsar el aprendizaje de los temas
+                hojas de estilo en cascada css y frameworks css  </p>
             <ul>
                 <li><a href="informacion de CSS.html">tema 1</a></li>
                 <li>opcion 2 </li>
