--- a/fase3/informacion de CSS.html
+++ b/fase3/informacion de CSS.html
@@ -23,7 +23,7 @@
             <li>recursos</li>
             <ul>
                 <li><a href="recurso1.html">recurso 1</a></li>
-                <li>recursos 2</li>
+                <li><a href=>recurso 2</a></li>
             </ul>
             <li>aprendizaje</li>
             <li>acerca de </li>
@@ -32,13 +32,14 @@
     <main>
         <section>
             <article>
-                <iframe src="pdf/Hojas de Estilo en Cascada CSS.pdf" frameborder="0"height=600 width="980"></iframe>
+                <iframe src="pdf/Hojas de Estilo en Cascada CSS.pdf" frameborder="0"height=600 width="950"></iframe>
             </article>
             <article>
                 <p><img src="img/foto.jpeg" alt="">
             </article>
         </section>
-        <aside>mi lateral
+        <aside>
+            <p>Contactanos por esta pagina</p>
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
         
