--- a/fase3/recurso1.html
+++ b/fase3/recurso1.html
@@ -14,9 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li>Tema</li> <h4>proposito del sitio </h4>
-            <p>el proposito de este sitio es impulsar el aprendizaje de los temas
-                hojas de estilo en cascada css y frameworks css  </p>
+            <li>Tema</li>
             <ul>
                 <li><a href="informacion de CSS.html">tema 1</a></li>
                 <li>opcion 2 </li>
@@ -40,7 +38,8 @@
                 <audio src="audio/Grabación.m4a"controls></audio>
             </article>
         </section>
-        <aside>mi lateral
+        <aside>
+            <p>Contactanos por esta pagina</p>
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
         
