--- a/fase3/index.html
+++ b/fase3/index.html
@@ -59,6 +59,6 @@
         </aside>
         
     </main>
-    <footer>mi pie de pagina </footer>
+    <footer> 31 de octubre del 2021 </footer>
 </body>
 </html>
