--- a/fase3/recurso1.html
+++ b/fase3/recurso1.html
@@ -16,17 +16,17 @@
             <li><a href="index.html">Inicio</a></li>
             <li>Tema</li>
             <ul>
-                <li><a href="informacion de CSS.html">tema 1</a></li>
-                <li>opcion 2 </li>
+                <li><a href="tema1.html">tema 1</a></li>
+                <li><a href="tema2.html">tema 2</a></li>
                 </ul>
                 
             <li>recursos</li>
             <ul>
                 <li><a href="recurso1.html">recurso 1</a></li>
-                <li>recursos 2</li>
+                <li><a href="recurso2.html">recurso2</a></li>
             </ul>
             <li>aprendizaje</li>
-            <li>acerca de </li>
+            <li>acerca de  </li>
         </ul>
     </nav>
     <main>
@@ -44,6 +44,6 @@
         </aside>
         
     </main>
-    <footer>mi pie de pagina </footer>
+    <footer> 31 de octubre del 2021 </footer>
 </body>
 </html>
