--- a/fase3/recurso2.html
+++ b/fase3/recurso2.html
@@ -17,25 +17,22 @@
             <li>Tema</li>
             <ul>
                 <li><a href="tema1.html">tema 1</a></li>
-                <li><a href="tema2.html">tema 2</a> </li>
+                <li><a href="tema2.html">tema 2</a></li>
                 </ul>
                 
             <li>recursos</li>
             <ul>
                 <li><a href="recurso1.html">recurso 1</a></li>
-                <li><a href="recurso2.html">recurso 2</a></li>
+                <li><a href="recurso2.html">recurso2</a></li>
             </ul>
             <li>aprendizaje</li>
-            <li>acerca de</li>
-        </ul>
+            <li>acerca de </li>
     </nav>
     <main>
         <section>
             <article>
-                <iframe src="pdf/Hojas de Estilo en Cascada CSS.pdf" frameborder="0"height=600 width="950"></iframe>
-            </article>
             <article>
-                <p><img src="img/foto.jpeg" width="400"height=300
+               <audio src="audio/framewoks.m4a"controls></audio>
             </article>
         </section>
         <aside>
@@ -44,6 +41,6 @@
         </aside>
         
     </main>
-    <footer>31 de octubre del 2021 </footer>
+    <footer> 31 de octubre del 2021 </footer>
 </body>
 </html>
