--- a/fase3/tema2.html
+++ b/fase3/tema2.html
@@ -17,25 +17,30 @@
             <li>Tema</li>
             <ul>
                 <li><a href="tema1.html">tema 1</a></li>
-                <li><a href="tema2.html">tema 2</a> </li>
+                <li><a href="tema2.html">tema 2</a></li>
                 </ul>
                 
             <li>recursos</li>
             <ul>
                 <li><a href="recurso1.html">recurso 1</a></li>
-                <li><a href="recurso2.html">recurso 2</a></li>
+                <li><a href="recurso2.html">recurso2</a></li>
             </ul>
             <li>aprendizaje</li>
-            <li>acerca de</li>
-        </ul>
+            <li>a cerca de</li>
     </nav>
     <main>
         <section>
             <article>
-                <iframe src="pdf/Hojas de Estilo en Cascada CSS.pdf" frameborder="0"height=600 width="950"></iframe>
+                <iframe src="pdf/que es frameworks.pdf" frameborder="0" height="600" width="950"></iframe>
             </article>
             <article>
-                <p><img src="img/foto.jpeg" width="400"height=300
+                <h4>frameworks css </h4>
+                 <p>
+                     es herramientas y pautas,para desarrollar el estilo de nuestra página web.
+                     <p>Yuste Torregrosa, Á., & Luján-Mora, S. (2013). iDESWEB: Frameworks CSS: Bootstrap. iDESWEB.</p>
+                     <h4>usos comunes</h4>
+                       <p>sustituir los elementos predeterminados del navegador</p>
+                       <p>ayudar a hacer el texto accesible en cualquier soporte</p>
             </article>
         </section>
         <aside>
@@ -44,6 +49,6 @@
         </aside>
         
     </main>
-    <footer>31 de octubre del 2021 </footer>
+    <footer> 31 de octubre del 2021 </footer>
 </body>
 </html>
